--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-icon.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-icon.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .lichkin-icon{position:relative;display:inline-block;background-repeat:no-repeat;text-align:center;}
-.lichkin-icon i{position:absolute;display:inline-block;left:0px;top:0px;vertical-align:middle;color:var(--lichkin-plugin-font-color);}
+.lichkin-icon i{position:absolute;display:inline-block;left:0px;top:0px;vertical-align:middle;color:#2e6da4;color:var(--lichkin-plugin-font-color);}
 .lichkin-hidden-icon{background-image:none !important;}
 
 .lichkin-icon-add i,
