--- a/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-map.css
+++ b/lichkin-ui/src/main/resources/META-INF/resources/webjars/LichKin-UI/1.0.0/plugins/lichkin-plugin-map.css
@@ -6,5 +6,6 @@
 }
 
 .amap-marker-label {
-  border-color: var(--lichkin-plugin-border-color);;
+  border-color: #2e6da4;
+  border-color: var(--lichkin-plugin-border-color);
 }
